# release-mate

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.release-mate/: main.toml
0.1.0/CHANGELOG/: index.html
0.1.0/search/: search_index.json
0.1.0/user-guide/multi-project/: index.html
0.1.1/CHANGELOG/: index.html
0.1.1/reference/commit-guidelines/: index.html
0.1.1/search/: search_index.json
0.1.1/user-guide/project-setup/: index.html
0.1.2/: index.html
0.1.2/CHANGELOG/: index.html
0.1.2/getting-started/installation/: index.html
0.1.2/getting-started/quick-start/: index.html
0.1.2/search/: search_index.json
0.1.3/CHANGELOG/: index.html
0.1.3/search/: search_index.json
0.1.4/CHANGELOG/: index.html
0.1.4/getting-started/installation/: index.html
0.1.4/reference/cli-commands/: index.html
0.1.4/search/: search_index.json
0.1.5/: 404.html
0.1.5/CHANGELOG/: index.html
0.1.5/search/: search_index.json
0.2.0/CHANGELOG/: index.html
0.2.0/reference/cli-commands/: index.html
0.2.0/search/: search_index.json
0.3.0/CHANGELOG/: index.html
0.3.0/search/: search_index.json
0.3.1/CHANGELOG/: index.html
0.3.1/getting-started/quick-start/: index.html
0.3.1/reference/cli-commands/: index.html
0.3.1/search/: search_index.json
0.3.1/user-guide/project-setup/: index.html
docs/: index.md
docs/getting-started/: installation.md  quick-start.md
docs/reference/: cli-commands.md  commit-guidelines.md
docs/user-guide/: multi-project.md  project-setup.md
latest/CHANGELOG/: index.html
latest/getting-started/installation/: index.html
latest/getting-started/quick-start/: index.html
latest/reference/cli-commands/: index.html
latest/reference/commit-guidelines/: index.html
latest/user-guide/multi-project/: index.html
latest/user-guide/project-setup/: index.html
release_mate/: __init__.py  api.py  cli.py
release_mate/templates/project/{{cookiecutter.root_dir}}/: {{cookiecutter.project_id}}.toml
tests/: test_cli.py  test_cli_additional.py  test_cli_commands.py  test_cli_edge_cases.py  test_cli_error_handling.py  test_cli_remaining.py  test_utils.py
